# bsdi-20-src

./: CONTENTS  COPYRGHT  Makefile  README.md  TRANS.TBL  find
etc/: Makefile  TRANS.TBL  aliases  crontab  daily  daily.local  gettytab  group  hosts  inetd.conf  inetd.conf.nowrappers  man.conf  master.passwd  monthly  monthly.local  motd  mtoolsrc  netstart.sample  networks  phones  printcap  rc  rc.local  remote  security  services  shells  syslog.conf  ttys  weekly  weekly.local
etc/amd_samples/: .MAP  TRANS.TBL  amd-home  amd-n  amd-vol  start-amd
etc/etc.hcx9/: .MAP  TRANS.TBL
etc/etc.hp300/: .MAP  TRANS.TBL
etc/etc.i386/: .MAP  MAKEDEV  TRANS.TBL  disktab  fstab.sample  fstab.sample.sd0  fstab.sample.wd0
etc/etc.luna68k/: .MAP  TRANS.TBL
etc/etc.pmax/: .MAP  TRANS.TBL
etc/etc.sparc/: .MAP  TRANS.TBL
etc/etc.tahoe/: .MAP  TRANS.TBL
include/: .MAP  Makefile  Makefile.links  TRANS.TBL  a.out.h  ar.h  assert.h  bitstring.h  ctype.h  db.h  dirent.h  disktab.h  err.h  fnmatch.h  fstab.h  fts.h  glob.h  grp.h  kvm.h  limits.h  locale.h  math.h  memory.h  netdb.h  nlist.h  paths.h  pwd.h  ranlib.h  regex.h  regexp.h  resolv.h  rune.h  runetype.h  setjmp.h  sgtty.h  signal.h  stab.h  stddef.h  stdio.h  stdlib.h  (+12 more)
lib/: Makefile  TRANS.TBL
lib/libg++/D/libg++/src/: .MAP  ChangeLog  CursesW.h  Makefile.in  TRANS.TBL  bitprims.h  configure.in  depend  generic.h  rx.h
libexec/: Makefile  TRANS.TBL
old/: .MAP  Makefile  Makefile.inc  TRANS.TBL
sbin/: TRANS.TBL
share/: TRANS.TBL
sys/: TRANS.TBL
usr.bin/: TRANS.TBL
usr.sbin/: TRANS.TBL
(+2674 files in other folders)
